--- a/Trabajo_Navidades_Diego_Sanchez/src/main/java/Vista/Loggin.form
+++ b/Trabajo_Navidades_Diego_Sanchez/src/main/java/Vista/Loggin.form
@@ -179,6 +179,9 @@
                 <Property name="horizontalAlignment" type="int" value="0"/>
                 <Property name="text" type="java.lang.String" value="Olvidaste tu contrase&#xf1;a ?"/>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="botonOlvidadaMouseClicked"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel3">
               <Properties>
