--- a/Trabajo_Navidades_Diego_Sanchez/src/main/java/Vista/VentanaPrincipal.form
+++ b/Trabajo_Navidades_Diego_Sanchez/src/main/java/Vista/VentanaPrincipal.form
@@ -224,7 +224,12 @@
             </Constraint>
           </Constraints>
         </Component>
-        <Component class="com.mycompany.flatlaffull.SVGImage" name="imagenPerfil">
+        <Component class="javax.swing.JLabel" name="jLabel1">
+          <Properties>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/img/perfil.png"/>
+            </Property>
+          </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="20" y="20" width="51" height="60"/>
